# subduction

./: .gitignore  Cargo.toml  GUIDANCE.md  HACKING.md  LICENSE-MIT  README.md  flake.nix  release.toml  rust-toolchain.toml
automerge_sedimentree/: Cargo.toml  README.md
automerge_sedimentree/benches/: egwalker.rs  ingest.rs
automerge_sedimentree/src/: indexed.rs  ingest.rs  lib.rs
automerge_sedimentree/tests/: bench_ingest_variants.rs  fragment_members_disjoint.rs  fragments_match_automerge.rs  id_ctr_inverse_comparison.rs  ingest_phase_timing.rs  list_op_fraction.rs  permutation_encodings.rs  real_world_ingestion.rs  s1_change_anatomy.rs  single_change_bundle_with_inverse.rs  single_change_format_compare.rs
automerge_sedimentree_wasm/: Cargo.toml  README.md  build_slim.js  package.json  slim-shim.ts
automerge_sedimentree_wasm/src/: error.rs  fragment.rs  lib.rs
automerge_sedimentree_wasm/tests/: reentry_demo_native.rs
automerge_subduction_ingest/: Cargo.toml  README.md
automerge_subduction_ingest/src/: main.rs
automerge_subduction_wasm/: Cargo.toml  README.md  build.rs  build_slim.js  package.json  pnpm-lock.yaml  slim-shim.ts
automerge_subduction_wasm/src/: commit_id.rs  error.rs  js_logger.rs  lib.rs
bijou64/: Cargo.toml  OPTIMISATION.md  README.md  SHOOTOUT.md  SHOOTOUT_ANALYSIS.md  SHOOTOUT_ANALYSIS_ARM.md  SHOOTOUT_ANALYSIS_X86.md  SPEC.md
bijou64/benches/: iai_shootout.rs  shootout.rs
bijou64/charts/: analyze.py  canonical_decode_cdf.html  canonical_decode_heatmap.html  decode_cdf.html  decode_heatmap.html  encode_array_cdf.html  encode_array_heatmap.html  encode_cdf.html  encode_heatmap.html  encoded_size_cdf.html  encoded_size_heatmap.html  gen_charts.py  percentiles.csv  percentiles.html  percentiles.md  stream_decode_cdf.html  stream_decode_heatmap.html
bijou64/src/: lib.rs
bivu64/: Cargo.toml  README.md  SPEC.md
bivu64/src/: lib.rs
keyhive_subduction_policy/: Cargo.toml  README.md
keyhive_subduction_policy/src/: lib.rs
sedimentree_automerge/: Cargo.toml
sedimentree_automerge/src/: lib.rs
sedimentree_automerge_wasm/: Cargo.toml  build_slim.js  package.json  slim-shim.ts
sedimentree_automerge_wasm/src/: error.rs  fragment.rs  lib.rs
sedimentree_core/: Cargo.toml  README.md  dhat-heap.json
sedimentree_core/benches/: sedimentree.rs
sedimentree_core/src/: blob.rs  cbor.rs  codec.rs  collections.rs  commit.rs  commit_dag.rs  crypto.rs  depth.rs  fragment.rs  future.rs  hex.rs  id.rs  lib.rs  loose_commit.rs  sedimentree.rs  storage.rs  test_utils.rs  topsorted.rs
sedimentree_core/tests/: ancestry_pruning_bug.rs  build_fragment_store.rs  codec_proptest.rs  diff_diverging_histories.rs  fingerprint_stability.rs  heap_profile.rs  minimize_dag.rs  minimize_reference.rs  missing_fragments_branching.rs  sync_convergence_props.rs
sedimentree_fs/: Cargo.toml
sedimentree_fs/src/: lib.rs  storage.rs
sedimentree_fs_storage/: Cargo.toml  README.md
sedimentree_fs_storage/benches/: load_loose_commits.rs  storage.rs
sedimentree_fs_storage/src/: lib.rs
sedimentree_fs_storage/tests/: dump_inspection.rs  relay_topology_fs.rs  roundtrip.rs
sedimentree_sync_cli/: Cargo.toml
sedimentree_sync_cli/src/: black_box.rs  main.rs
sedimentree_sync_core/: Cargo.toml
sedimentree_sync_core/src/: chunk.rs  connection.rs  lib.rs  message.rs  payload.rs  peer.rs  storage.rs  sync.rs
sedimentree_sync_wasm/: Cargo.toml
sedimentree_sync_wasm/src/: callback.rs  js.rs  lib.rs
sedimentree_sync_websocket/: Cargo.toml
sedimentree_sync_websocket/src/: error.rs  lib.rs  tokio.rs  websocket.rs
sedimentree_sync_websocket/tests/: round_trip.rs
sedimentree_wasm/: Cargo.toml  README.md  build.rs  build_slim.js  package.json  pnpm-lock.yaml  slim-shim.ts
sedimentree_wasm/src/: alloc_cap.rs  blob.rs  commit_id.rs  depth.rs  digest.rs  fragment.rs  lib.rs  loose_commit.rs  sedimentree.rs  sedimentree_id.rs  signed.rs  storage.rs
sedimentree_wasm/tests/: fingerprint_stability_wasm.rs  wasm_panic_visibility.rs
subduction_automerge_wasm/: Cargo.toml  build_slim.js  package.json  slim-shim.ts
subduction_automerge_wasm/src/: lib.rs
subduction_bench_support/: Cargo.toml
subduction_bench_support/src/: cross_crate.rs  fixtures.rs  harness.rs  lib.rs  scale.rs
subduction_benches/: Cargo.toml
subduction_benches/src/: lib.rs  scale.rs  workload.rs
subduction_cli/: Cargo.toml  EPHEMERAL_RELAY.md  README.md
subduction_cli/monitoring/: loki.yaml
subduction_cli/src/: admin.rs  automerge_ephemeral_relay.rs  client.rs  ephemeral_relay.rs  fs_storage.rs  handler.rs  inspect.rs  key.rs  keyhive.rs  keyhive_storage.rs  main.rs  metrics.rs  migrate.rs  policy.rs  purge.rs  server.rs  transport.rs  wire.rs
subduction_cli/tests/: iroh_e2e.rs
subduction_core/: Cargo.toml  README.md
subduction_core/benches/: handshake.rs  inbound_dispatch.rs  listen_dispatch.rs  listen_dispatch_local.rs  many_peer.rs  stress.rs  subduction.rs
subduction_core/src/: authenticated.rs  cbor.rs  codec.rs  collections.rs  connection.rs  crypto.rs  handler.rs  handshake.rs  lib.rs  metrics.rs  minimized_sedimentree.rs  multiplexer.rs  nonce_cache.rs  peer.rs  pending_blob_requests.rs  policy.rs  remote_heads.rs  run.rs  sharded_map.rs  spawn.rs  storage.rs  subduction.rs  sync.rs  sync_session.rs  test_utils.rs  timeout.rs  timestamp.rs  transport.rs  unstarted.rs
subduction_core/tests/: add_commit_sync.rs  add_sedimentree.rs  addbatch_storage_durability.rs  batch_ingest.rs  bidirectional_sync.rs  blob_mismatch.rs  blob_operations.rs  broadcast_worker_lifecycle.rs  bug9_200_docs.rs  built_batch.rs  codec_proptest.rs  common.rs  concurrent_sync.rs  connection_cleanup.rs  connection_management.rs  connection_policy.rs  convergence.rs  (+29 more)
subduction_crypto/: Cargo.toml  README.md
subduction_ephemeral/: Cargo.toml  README.md
subduction_http_long_poll/: Cargo.toml
subduction_http_longpoll/: Cargo.toml  README.md
subduction_iroh/: Cargo.toml  README.md
subduction_keyhive/: Cargo.toml  README.md
subduction_keyhive_orchestrator/: Cargo.toml  README.md
(+508 files in other folders)
