[workspace]
resolver = "3"
members = [
  "automerge_sedimentree",
  "automerge_sedimentree_wasm",
  "automerge_subduction_wasm",
  "build_info",
  "sedimentree_core",
  "sedimentree_wasm",
  "subduction_cli",
  "subduction_core",
  "subduction_keyhive_policy",
  "subduction_wasm",
  "subduction_websocket"
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inkandswitch/subduction"
authors = [
  "Alex Good <alex@patternist.xyz>",
  "Brooklyn Zelenka <hello@brooklynzelenka.com>"
]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
arbitrary = "1.4"
async-channel = { version = "2.5", default-features = false }
async-lock = { version = "3.4", default-features = false }
async-tungstenite = "0.31.0"
automerge = "0.7.0"
axum = "0.8"
base58 = "0.2.0"
blake3 = { version = "1.8", default-features = false }
bolero = "0.13.4"
clap = { version = "4.5", features = ["derive"] }
console-subscriber = "0.5.0"
console_error_panic_hook = { version = "0.1.7" }
criterion = { version = "0.5", default-features = false }
dhat = "0.3"
ed25519-dalek = { version = "2.1", default-features = false }
from_js_ref = "0.1.3" # no_std by default
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
futures-timer = "3.0" # NOTE depends on `std`
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
future_form = "0.2.0"
getrandom = "0.2" # matches ed25519-dalek transitive dep
hex = "0.4"
js-sys = { version = "0.3.81", default-features = false }
keyhive_core = { git = "https://github.com/inkandswitch/keyhive", branch = "main" }
metrics = "0.24"
minicbor = { version = "2.1", default-features = false, features = ["alloc", "derive"] }
minicbor-serde = { version = "0.6", default-features = false, features = ["alloc"] }
metrics-exporter-prometheus = "0.16"
nonempty = { version = "0.12.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0", default-features = false }
siphasher = { version = "1.0", default-features = false }
testresult = "0.4.1"
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.46", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-test = "0.4.4"
tokio-util = "0.7.16"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.2", default-features = false }
tungstenite = "0.27"
url = { version = "2.5", default-features = false }
wasm-bindgen = { version = "0.2.105", default-features = false }
wasm-bindgen-futures = { version = "0.4.53", default-features = false }
wasm-tracing = { git = "https://github.com/dsgallups/wasm-tracing.git", rev = "9288999e1fbbd315bfa0602488138d40b2a55299" }
wasm_refgen = "0.1.5" # no_std by default
windows-sys = "0.61.2"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow" # various transitive deps
pedantic = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
