[workspace]
resolver = "3"
members = [
  "automerge_sedimentree",
  "automerge_sedimentree_wasm",
  "automerge_subduction_ingest",
  "automerge_subduction_wasm",
  "bijou64",
  "sedimentree_core",
  "sedimentree_fs_storage",
  "sedimentree_wasm",
  "subduction_cli",
  "subduction_core",
  "subduction_crypto",
  "subduction_ephemeral",
  "subduction_http_longpoll",
  "subduction_iroh",
  "subduction_keyhive_policy",
  "subduction_keyhive",
  "subduction_wasm",
  "subduction_websocket"
]

[workspace.package]
edition = "2024"
rust-version = "1.90"
license = "MIT OR Apache-2.0"
repository = "https://github.com/inkandswitch/subduction"
authors = [
  "Alex Good <alex@patternist.xyz>",
  "Brooklyn Zelenka <hello@brooklynzelenka.com>"
]

[workspace.dependencies]
# Internal crates
automerge_sedimentree = { version = "0.9.0", path = "automerge_sedimentree", default-features = false }
automerge_sedimentree_wasm = { version = "0.9.0", path = "automerge_sedimentree_wasm" }
automerge_subduction_wasm = { version = "0.8.0", path = "automerge_subduction_wasm", default-features = false }
bijou64 = { version = "0.2.0", path = "bijou64", default-features = false }
sedimentree_core = { version = "0.10.0", path = "sedimentree_core", default-features = false }
sedimentree_fs_storage = { version = "0.9.0", path = "sedimentree_fs_storage" }
sedimentree_wasm = { version = "0.10.0", path = "sedimentree_wasm", default-features = false }
subduction_core = { version = "0.12.0", path = "subduction_core", default-features = false }
subduction_crypto = { version = "0.6.0", path = "subduction_crypto", default-features = false }
subduction_ephemeral = { version = "0.5.0", path = "subduction_ephemeral", default-features = false }
subduction_http_longpoll = { version = "0.8.0", path = "subduction_http_longpoll", default-features = false }
subduction_iroh = { version = "0.7.0", path = "subduction_iroh" }
subduction_keyhive = { version = "0.4.0", path = "subduction_keyhive" }
subduction_keyhive_policy = { version = "0.8.0", path = "subduction_keyhive_policy" }
subduction_wasm = { version = "0.12.0", path = "subduction_wasm", default-features = false }
subduction_websocket = { version = "0.9.1", path = "subduction_websocket", default-features = false }

# External crates
ahash = "0.8"
arbitrary = "1.4"
async-channel = { version = "2.5", default-features = false }
async-lock = { version = "3.4", default-features = false }
async-tungstenite = "0.31.0"
automerge = "0.8.0"
axum = "0.8"
base58 = "0.2.0"
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
blake3 = { version = "1.8", default-features = false }
bolero = "0.13.4"
ciborium = { version = "0.2", default-features = false }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
console-subscriber = "0.5.0"
console_error_panic_hook = { version = "0.1.7" }
criterion = { version = "0.5", default-features = false }
criterion_pprof = { package = "pprof", version = "0.15", default-features = false, features = ["criterion", "flamegraph"] }
dhat = "0.3"
ed25519-dalek = { version = "2.1", default-features = false }
eyre = "0.6"
from_js_ref = "0.2.0" # no_std by default
future_form = "0.3.0"
futures = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
futures-timer = "3.0" # NOTE depends on `std`
futures-util = { version = "0.3.31", default-features = false, features = ["alloc", "async-await"] }
getrandom = "0.2" # matches ed25519-dalek transitive dep
hex = "0.4"
http-body-util = "0.1"
iroh = "0.96.1"
hyper = { version = "1.6", default-features = false }
hyper-util = { version = "0.1", default-features = false }
js-sys = { version = "=0.3.95", default-features = false }
keyhive_core = "0.3.0"
keyhive_crypto = "0.1.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
nonempty = { version = "0.12.0", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
rand = { version = "0.8.5", default-features = false }
rayon = "1.11"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false }
siphasher = { version = "1.0", default-features = false }
tempfile = "3"
testresult = "0.4.1"
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.46", features = ["macros", "net", "rt-multi-thread", "sync"] }
tokio-test = "0.4.4"
tokio-util = "0.7.16"
tracing = { version = "0.1.41", default-features = false }
tracing-loki = "0.2"
tracing-subscriber = { version = "0.3.2", default-features = false }
tungstenite = "0.27"
url = { version = "2.5", default-features = false }
wasm-bindgen = { version = "=0.2.118", default-features = false }
wasm-bindgen-futures = { version = "=0.4.68", default-features = false }
wasm-tracing = { version = "3.0.0-alpha.0", git = "https://github.com/dsgallups/wasm-tracing.git", rev = "9288999e1fbbd315bfa0602488138d40b2a55299" }
wasm_refgen = "0.2.0" # no_std by default
windows-sys = "0.61.2"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow" # various transitive deps
pedantic = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

# The workspace-wide opt-level="z" is tuned for Wasm bundle size.
# Override to opt-level=3 only for crates that are NOT shared with the
# Wasm target, so Wasm bundles stay small while the native CLI is fast.
[profile.release.package.subduction_cli]
opt-level = 3

[profile.release.package.subduction_http_longpoll]
opt-level = 3

[profile.release.package.subduction_iroh]
opt-level = 3

[profile.release.package.subduction_websocket]
opt-level = 3

[profile.release.package.sedimentree_fs_storage]
opt-level = 3

[profile.release.package.tokio]
opt-level = 3

# Wasm crates: preserve Wasm name section for readable stack traces in
# production. Only strips DWARF debug info, not function names (~5-15%
# larger than strip="symbols", but panics show real function names
# instead of wasm-function[4616]).
[profile.release.package.sedimentree_wasm]
strip = "debuginfo"

[profile.release.package.subduction_wasm]
strip = "debuginfo"

[profile.release.package.automerge_sedimentree_wasm]
strip = "debuginfo"

[profile.release.package.automerge_subduction_wasm]
strip = "debuginfo"

# Optimize heavy dependencies in test/dev builds so that integration tests
# exercising real Automerge documents finish in reasonable time.
# Without this, debug-mode HashSet/HashMap and automerge internals are
# ~10-50x slower than release, making real-document tests impractical.
[profile.dev.package.automerge]
opt-level = 2

[profile.dev.package.sedimentree_core]
opt-level = 2

[profile.test.package.automerge]
opt-level = 2

[profile.test.package.automerge_sedimentree]
opt-level = 2

[profile.test.package.sedimentree_core]
opt-level = 2

# Benchmarks inherit from release, but the workspace release profile is tuned
# for Wasm (opt-level="z", strip="symbols"). Override for accurate benchmarks
# with debug info sufficient for flamegraphs.
[profile.bench]
codegen-units = 1
debug = true        # Full debug symbols for flamegraphs/profiling
lto = "thin"        # Faster link than "fat", close enough for profiling
opt-level = 3       # Speed, not size
strip = false       # Keep symbols for profiling tools

# Debug-oriented Wasm profile. Preserves full DWARF so Chrome DevTools
# (with the C/C++ DevTools Support extension) can step through.
#
# Built via: `bodge <crate>` / `bodge:all`, which pass
# `--debug-profile wasm-debug` to wasm-bodge. The debug variant is exposed
# through the `./debug` subpath exports of each `*_wasm` package.
#
# Tradeoff rationale vs. profile.release:
#
# | knob             | wasm-debug | release | why different             |
# |------------------|------------|---------|---------------------------|
# | opt-level        | 1          | "z"     | preserve locals/stepping  |
# | lto              | "thin"     | "fat"   | keep stack frames clear   |
# | codegen-units    | 16         | 1       | faster rebuild cycle      |
# | debug            | "limited"  | (off)   | DWARF for step-through    |
# | strip            | "none"     | symbols | DWARF must survive        |
# | debug-assertions | true       | false   | catch bugs during debug   |
# | overflow-checks  | true       | false   | catch bugs during debug   |
# | panic            | "abort"    | "abort" | (inherited)               |
#
# opt-level=1 is the Chrome-DevTools sweet spot: most locals remain visible,
# line stepping feels natural, and iterator chains don't fuse. Dropping to 0
# would preserve every variable but makes Automerge/sedimentree_core
# unusably slow in the browser; raising to 2 starts fusing lines and
# optimizing out locals, which makes stepping confusing. See per-package
# overrides below for the one concession to runtime ergonomics.
#
# wasm-opt is skipped by wasm-bodge for the debug variant (binaryen's DWARF
# support corrupts wasm-bindgen-emitted DWARF), so no additional knob here.
[profile.wasm-debug]
inherits = "release"
codegen-units = 16
# "limited" keeps line tables + most type info + locals, but omits the
# exhaustive location expressions of `debug = "full"`. Chrome DevTools can
# still step through and inspect variables; empirically ~2x smaller DWARF
# than "full". Measured sizes for the four `_wasm` crates under this profile
# (raw / gzipped, compared to release):
#
# |                            | release       | wasm-debug    | multiplier   |
# | sedimentree_wasm           |  1 MiB / 224K | 11 MiB / 2 MiB | 12x raw, 10x gz |
# | subduction_wasm            |  3 MiB / 723K | 29 MiB / 6 MiB | 10x raw,  8x gz |
# | automerge_sedimentree_wasm |  3 MiB / 761K | 43 MiB / 8 MiB | 14x raw, 11x gz |
# | automerge_subduction_wasm  |  3 MiB / 778K | 41 MiB / 8 MiB | 14x raw, 11x gz |
debug = "limited"
debug-assertions = true
lto = "thin"
opt-level = 1
overflow-checks = true
strip = "none"

# Override the release profile's per-package `strip = "debuginfo"` for the
# four Wasm-binding crates: we inherit from release, so those strip
# overrides would otherwise wipe the DWARF we explicitly want here.
[profile.wasm-debug.package.sedimentree_wasm]
strip = "none"

[profile.wasm-debug.package.subduction_wasm]
strip = "none"

[profile.wasm-debug.package.automerge_sedimentree_wasm]
strip = "none"

[profile.wasm-debug.package.automerge_subduction_wasm]
strip = "none"

# Mirror the [profile.dev.package.*] / [profile.test.package.*] overrides:
# Automerge and sedimentree_core are HashMap/BTreeMap-heavy and crawl at
# opt-level < 2 in the browser. Users debugging Subduction code (the usual
# case) don't need to step through Automerge internals line-by-line. If you
# DO need to debug inside Automerge itself, temporarily remove these
# overrides.
[profile.wasm-debug.package.automerge]
opt-level = 2

[profile.wasm-debug.package.automerge_sedimentree]
opt-level = 2

[profile.wasm-debug.package.sedimentree_core]
opt-level = 2
