[package]
name = "automerge_sedimentree"
version = "0.10.1"
description = "Adapter for storing Automerge documents in Sedimentree"

categories = ["web-programming"]
keywords = ["automerge", "sedimentree"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
automerge = { workspace = true }
sedimentree_core = { workspace = true }

[dev-dependencies]
automerge_sedimentree = { path = ".", features = ["std", "test-utils"] }
criterion = { workspace = true }
criterion_pprof = { workspace = true }
flate2 = "1"
rand = { workspace = true, features = ["small_rng"] }
testresult = { workspace = true }

[[bench]]
name = "egwalker"
harness = false
required-features = ["test-utils"]

[[test]]
name = "real_world_ingestion"
required-features = ["test-utils"]

[[test]]
name = "fragment_members_disjoint"
required-features = ["test-utils"]

[features]
default = []
std = ["sedimentree_core/std"]
# Expose IndexedSedimentreeAutomerge as a reference CommitStore impl for
# tests and benches that cross-validate fragmentation strategies. Not part
# of the published API.
test-utils = ["std"]

[lints]
workspace = true
