[package]
name = "automerge_sedimentree_wasm"
version = "0.4.1"
description = "Wasm bindings for storing Automerge documents in Sedimentree"
categories = ["web-programming"]
keywords = ["automerge", "sedimentree", "wasm"]
readme = "./README.md"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = { workspace = true }
base58 = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
js-sys = { workspace = true }
sedimentree_core = { workspace = true }
sedimentree_wasm = { workspace = true }
subduction_wasm = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm_refgen = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = []
std = [
  "blake3/std",
  "js-sys/std",
  "sedimentree_core/std",
  "thiserror/std",
  "tracing/std",
  "wasm-bindgen/std"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-bulk-memory-opt", "--enable-nontrapping-float-to-int", "--enable-sign-ext", "--enable-mutable-globals", "--enable-reference-types", "--enable-multivalue"]

[lints]
workspace = true
