[package]
name = "automerge_sedimentree_wasm"
version = "0.12.1"
description = "Wasm bindings for storing Automerge documents in Sedimentree"
categories = ["web-programming"]
keywords = ["automerge", "sedimentree", "wasm"]
readme = "./README.md"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base58 = { workspace = true }
blake3 = { workspace = true }
js-sys = { workspace = true }
sedimentree_core = { workspace = true }
sedimentree_wasm = { workspace = true }
subduction_wasm_bootstrap = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }

[features]
default = []
std = [
  "blake3/std",
  "js-sys/std",
  "sedimentree_core/std",
  "thiserror/std",
  "wasm-bindgen/std"
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-multivalue", "--enable-mutable-globals", "--enable-nontrapping-float-to-int", "--enable-reference-types", "--enable-sign-ext", "--enable-simd"]

[lints]
workspace = true
