[package]
name = "automerge_subduction_wasm"
version = "0.1.0"
description = "Wasm bindings for syncing Automerge documents via Subduction"
categories = ["web-programming"]
keywords = ["automerge", "sedimentree", "wasm"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = { workspace = true, features = ["wasm"] }
build_info = { path = "../build_info" }
console_error_panic_hook = { version = "0.1.7", optional = true }
automerge_sedimentree_wasm = { path = "../automerge_sedimentree_wasm" }
subduction_wasm = { path = "../subduction_wasm" }
tracing = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-tracing = { workspace = true, optional = true }
wasm_refgen = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook", "std", "wasm-tracing"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
std = [
  "automerge_sedimentree_wasm/std",
  "subduction_wasm/std",
  "tracing/std",
  "wasm-bindgen/std",
]
wasm-tracing = ["dep:wasm-tracing"]

[lints]
workspace = true
