[package]
name = "automerge_subduction_wasm"
version = "0.2.1"
description = "Wasm bindings for syncing Automerge documents via Subduction"
categories = ["web-programming"]
keywords = ["automerge", "sedimentree", "wasm"]
readme = "./README.md"
build = "build.rs"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = { workspace = true, features = ["wasm"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
automerge_sedimentree_wasm = { workspace = true }
js-sys = { workspace = true }
subduction_wasm = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "std"] }
wasm-bindgen = { workspace = true }
wasm-tracing = { workspace = true, optional = true }
wasm_refgen = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

[features]
default = ["console_error_panic_hook", "std", "wasm-tracing"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
std = [
  "automerge_sedimentree_wasm/std",
  "subduction_wasm/std",
  "tracing/std",
  "wasm-bindgen/std",
]
wasm-tracing = ["dep:wasm-tracing"]

[lints]
workspace = true
