[package]
name = "automerge_subduction_wasm"
version = "0.13.0"
description = "Wasm bindings for syncing Automerge documents via Subduction"
categories = ["web-programming"]
keywords = ["automerge", "sedimentree", "wasm"]
readme = "./README.md"
build = "build.rs"
publish = false

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
automerge = { workspace = true, features = ["wasm"] }
console_error_panic_hook = { workspace = true }
automerge_sedimentree_wasm = { workspace = true }
js-sys = { workspace = true }
subduction_wasm = { workspace = true, features = ["std"] }
subduction_wasm_bootstrap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "std"] }
wasm-bindgen = { workspace = true }
wasm-tracing = { workspace = true, optional = true }
wasm_refgen = { workspace = true }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
# Pulled in by automerge 0.9 (fragments branch); needs explicit wasm_js opt-in.
getrandom_04 = { package = "getrandom", version = "0.4", features = ["wasm_js"] }

[features]
default = ["idb", "std", "wasm-tracing"]
# IndexedDB storage backend (browser-only).
idb = ["subduction_wasm/idb"]
std = [
  "automerge_sedimentree_wasm/std",
  "subduction_wasm/std",
  "tracing/std",
  "wasm-bindgen/std",
]
wasm-tracing = ["dep:wasm-tracing"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-multivalue", "--enable-mutable-globals", "--enable-nontrapping-float-to-int", "--enable-reference-types", "--enable-sign-ext", "--enable-simd"]

[lints]
workspace = true
