[package]
name = "bijou64"
version = "0.2.0"
description = "Bijective variable-length encoding for unsigned 64-bit integers"
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]

categories = ["encoding", "no-std"]
keywords = ["varint", "variable-length", "canonical", "bijective"]
readme = "./README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arbitrary = { workspace = true, optional = true, features = ["derive"] }
bolero = { workspace = true, optional = true, features = ["arbitrary"] }
thiserror = { workspace = true }

[dev-dependencies]
arbitrary = { workspace = true, optional = false, features = ["derive"] }
bijou64 = { path = ".", features = ["bolero"] }
bolero = { workspace = true, features = ["arbitrary"] }
criterion = { workspace = true }
criterion_pprof = { workspace = true }
iai-callgrind = "0.16"
leb128 = "0.2"
rand = { workspace = true, features = ["small_rng"] }
testresult = { workspace = true }
varu64 = "0.7"
vu64 = "0.2"
vu128 = "1.1"

[[bench]]
name = "shootout"
harness = false

[[bench]]
name = "iai_shootout"
harness = false

[features]
default = []
arbitrary = ["dep:arbitrary"]
bolero = ["dep:bolero", "arbitrary"]

[lints]
workspace = true
