[package]
name = "sedimentree_automerge"
version = "0.1.0"
description = "Automerge integration for Sedimentree"

categories = ["web-programming"]
keywords = ["sedimentree", "automerge"]
readme = "./README.md"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
automerge = { workspace = true }
sedimentree_core = { path = "../sedimentree_core" }

[features]
default = []
